<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">MIEXMI</string>
    <string name="In_Se" translatable="false">Iniciar sesión</string>
    <string name="dni" translatable="false">DNI</string>
    <string name="contrasena" translatable="false">Contraseña</string>
    <string name="Nregistro" translatable="false">¿No tienes cuenta? Regístrate</string>
    <string name="registro" translatable="false">Registro</string>
    <string name="registrarse" translatable="false">Registarse</string>
    <string name="entrar">Entrar</string>
    <string name="bienvenido">Bienvenido,</string>
    <string name="nombre_ejemplo">Eduardo Álvarez</string>
    <string name="empleo_ejemplo">Empleo: Sargento Primero</string>
    <string name="detalle_empleo">Empleo: %1$s</string>
    <string name="detalle_destino">Destino: %1$s</string>
    <string name="destino_ejemplo">Destino: CIFP Avilés (PMDM)</string>
    <string name="resumen_expediente">Resumen del Expediente</string>
    <string name="cat_datos_personales">Datos\nPersonales</string>
    <string name="cat_historial_profesional">Historial\nProfesional</string>
    <string name="cat_meritos_formacion">Méritos y\nFormación</string>
    <string name="cat_otros_registros">Otros\nRegistros</string>
    <string name="cat_exportar_expediente">Exportar\nExpediente</string>
    <string name="cat_actividad_app">Actividad\nAPP</string>
    <string name="consulta_todo_el_expediente">Consulta todo el Expediente</string>
    <string name="historial_profesional">Historial Profesional</string>
    <string name="empleos">Empleos</string>
    <string name="destinos">Destinos</string>
    <string name="misiones">Misiones</string>
    <string name="comisiones">Comisiones de Servicio</string>
    <string name="evaluacion">Evaluación Ascenso</string>
    <string name="hps">Habilitación Personal\nSeguridad</string>
    <string name="relacion">Relación\nAdministración</string>
    <string name="situaciones">Stituaciones\nAdministrativas</string>
    <string name="volver">Volver</string>
    <string name="titulo_meritos_formacion">Méritos y Formación</string>
    <string name="trienios">Trienios</string>
    <string name="aptitudes">Aptitudes</string>
    <string name="recompensas">Recompensas</string>
    <string name="distintivos">Distintivos</string>
    <string name="idiomas">Idiomas</string>
    <string name="cursos_militares">Cursos\nMilitares</string>
    <string name="titulos_civiles">Títulos y\nCursos Civiles</string>
    <string name="titulo_otros_registros">Otros Registros</string>
    <string name="tgcf">T.G.C.F.</string>
    <string name="carnes_conducir">Carnés\nConducir</string>
    <string name="armas_particulares">Armas\nParticulares</string>
    <string name="titulo_datos_personales">Datos Personales</string>
    <string name="filiacion">Filiación</string>
    <string name="tmi">T.M.I.</string>
    <string name="cuerpo_escala">Cuerpo / Escala\nEspecialidad</string>
    <string name="nombre_del_destino">Nombre del Destino</string>
    <string name="fecha_bod_dd_mm_aaaa">Fecha BOD (DD/MM/AAAA)</string>
    <string name="n_bod">Nº BOD</string>
    <string name="anadir">Añadir</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="historial_de_destinos_guardados">Historial de Destinos guardados:</string>
    <string name="nº">Nº</string>
    <string name="nombre_destino">Nombre Destino</string>
    <string name="fecha_bod">Fecha BOD</string>
    <string name="nombre_de_la_mision">Nombre de la Misión</string>
    <string name="nombre_mision">Nombre Misión</string>
    <string name="historial_de_misiones_guardadas">Historial de Misiones guardadas:</string>
    <string name="nombre_del_empleo">Nombre del Empleo</string>
    <string name="nombre_empleo">Nombre Empleo</string>
    <string name="historial_de_empleos_guardados">Historial de Empleos guardados:</string>
    <string name="nombre_de_la_comision">Nombre de la Comisión</string>
    <string name="nombre_comision">Nombre Comisión</string>
    <string name="historial_de_comisiones_guardadas">Historial de Comisiones guardadas:</string>
    <string name="nombre_de_la_relacion">Nombre de la Relación</string>
    <string name="nombre_relacion">Nombre Relación</string>
    <string name="historial_de_relaciones_guardadas">Historial de Relaciones guardadas:</string>
    <string name="nombre_de_la_situacion">Nombre de la Situación</string>
    <string name="nombre_situacion">Nombre Situación</string>
    <string name="historial_de_situaciones_guardadas">Historial de Situaciones guardadas:</string>
    <string name="numero_de_trienio">Número de Trienio (Ej: 1, 2, 3…)</string>
    <string name="num_trienio">Nº Trienio</string>
    <string name="historial_de_trienios_guardados">Historial de Trienios guardados:</string>
    <string name="grupo_del_trienio">Grupo del Trienio (Ej: A1, C1)</string>
    <string name="grupo_trienio">Grupo</string>
    <string name="nombre_de_la_recompensa">Nombre de la Recompensa</string>
    <string name="nombre_recompensa">Nombre Recompensa</string>
    <string name="historial_de_recompensas_guardadas">Historial de Recompensas guardadas:</string>
    <string name="nombre_del_distintivo">Nombre del Distintivo</string>
    <string name="nombre_distintivo">Nombre Distintivo</string>
    <string name="historial_de_distintivos_guardados">Historial de Distintivos guardados:</string>
    <string name="nombre_de_la_aptitud">Nombre de la Aptitud</string>
    <string name="nombre_aptitud">Nombre Aptitud</string>
    <string name="historial_de_aptitudes_guardadas">Historial de Aptitudes guardadas:</string>
    <string name="numero_fila">%1$d</string>
    <string name="cee_fundamental">Cuerpo y Escala</string>
    <string name="nombre_del_ceef">Cuerpo, Escala o Especialidad</string>
    <string name="nombre_ceef">Cuerpo / Escala</string>
    <string name="historial_de_ceef_guardados">Historial de registros guardados:</string>
    <string name="nombre_del_curso">Nombre del Curso</string>
    <string name="nombre_curso">Nombre Curso</string>
    <string name="historial_de_cursos_guardados">Historial de Cursos guardados:</string>
    <string name="nombre_del_titulo_civil">Nombre del Título Civil</string>
    <string name="nombre_titulo">Nombre Título</string>
    <string name="historial_de_titulos_guardados">Historial de Títulos guardados:</string>
    <string name="titulos_civiles_pantalla">Títulos Civiles</string>
    <string name="nombre_de_la_evaluacion">Nombre de la Evaluación</string>
    <string name="nombre_evaluacion">Nombre Evaluación</string>
    <string name="historial_de_evaluaciones_guardadas">Historial de Evaluaciones guardadas:</string>
    <string name="resultado_evaluacion">Resultado (Ej: Apto, No Apto…)</string>
    <string name="resultado">Resultado</string>
    <string name="hps_pantalla">Habilitación de Seguridad</string>
    <string name="nombre_habilitacion">Nombre de la Habilitación</string>
    <string name="fecha_concesion">Fecha Concesión</string>
    <string name="fecha_caducidad">Fecha Caducidad</string>
    <string name="historial_hps_guardadas">Historial de HPS guardadas:</string>
    <string name="tmi_pantalla">Tarjeta Militar (TMI)</string>
    <string name="numero_tarjeta_tmi">Nº de Tarjeta</string>
    <string name="fecha_caducidad_tmi">Fecha de Caducidad</string>
    <string name="historial_tmi_guardadas">Historial de Tarjetas guardadas:</string>
    <string name="armas_particulares_pantalla">Armas Particulares</string>
    <string name="nombre_del_arma">Nombre/Modelo del Arma</string>
    <string name="nombre_arma">Nombre Arma</string>
    <string name="numero_serie_arma">Nº de Serie</string>
    <string name="fecha_caducidad_arma">Fecha de Caducidad</string>
    <string name="historial_armas_guardadas">Historial de Armas guardadas:</string>
    <string name="tcgf_pantalla">Pruebas Físicas (TGCF)</string>
    <string name="puntuacion_tcgf">Puntuación obtenida</string>
    <string name="apto_tcgf">Resultado (Ej: Apto / No Apto)</string>
    <string name="fecha_prueba">Fecha de la Prueba</string>
    <string name="historial_tcgf_guardados">Historial de pruebas TGCF guardadas:</string>
    <string name="apto_columna">Resultado </string>
    <string name="puntuacion_columna">Ptos.</string>
    <string name="carnets_pantalla">Permisos de Conducción</string>
    <string name="tipo_carnet_hint">Tipo de Permiso (ej. B, C, C+E…)</string>
    <string name="tipo_carnet_columna">Permiso</string>
    <string name="concesion_columna">Concesión</string>
    <string name="caducidad_columna">Caducidad</string>
    <string name="historial_carnets_guardados">Historial de permisos guardados:</string>
    <string name="idiomas_pantalla">Idiomas (SLP)</string>
    <string name="nombre_del_idioma">Idioma (ej. Inglés, Francés…)</string>
    <string name="nombre_idioma_columna">Idioma</string>
    <string name="resultado_slp_hint">Perfil SLP (ej. 2.2.2.2)</string>
    <string name="resultado_columna">SLP</string>
    <string name="historial_idiomas_guardados">Historial de idiomas guardados:</string>
    <string name="ejemplo_slp">Ej: 3.3+.2.1</string>
    <string name="titulo_registro_actividad">Registro de Actividad</string>
    <string name="dni_log">DNI Usuario</string>
    <string name="fecha_hora_log">Fecha y Hora de Acceso</string>
    <string name="lista_vacia_log">No hay registros de actividad aún.</string>
    <string name="filiacion_pantalla">Datos de Filiación</string>
    <string name="nombre_filiacion">Nombre</string>
    <string name="apellidos_filiacion">Apellidos</string>
    <string name="tmi_filiacion">Nº de TMI</string>
    <string name="fecha_incorp_filiacion">Fecha Incorporación</string>
    <string name="num_escalafon">Nº Escalafón</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="seguridad_pantalla">Cambio de Contraseña</string>
    <string name="dni_usuario">DNI / NIF</string>
    <string name="pass_actual">Contraseña Actual (Obligatorio para guardar)</string>
    <string name="pass_nueva">Nueva Contraseña</string>
    <string name="pass_repetir">Repetir Nueva Contraseña</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="usuario_conectado">Usuario: %1$s</string>
    <string name="nombre_completo">%1$s %2$s</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="ajustes_de_seguridad">Ajustes de Seguridad</string>
    <string name="buscar_en_expediente">BUSCAR EN EXPEDIENTE</string>
    <string name="filtrar_por_n_de_bod_o_fecha_de_bod">Filtrar por Nº de bod o Fecha de Bod:</string>
    <string name="visor_de_expediente">Visor de Expediente</string>
    <string name="logo_mi_expediente_militar">Logo Mi Expediente Militar</string>
    <string name="formato_dni">DNI: %1$s</string>
    <string name="desconocido">Desconocido</string>
    <string name="sin_filiacion">Sin Filiación Registrada</string>
    <string name="resultados_filtro">=== RESULTADOS DEL FILTRO ===\n\n%1$s</string>
</resources>