<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_fondo_abajo">

    <View
        android:id="@+id/viewHeaderMeritos"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/bbva_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnVolverMeritos"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/volver"
        android:src="@drawable/abc_ic_ab_back_material"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloCategoriaMeritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_meritos_formacion"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVolverMeritos" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderMeritos">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubTrienios"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/trienios" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubAptitudes"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/aptitudes" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubRecompensas"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/recompensas" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubDistintivos"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/distintivos" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubIdiomas"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/idiomas" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubCursosMilitares"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/cursos_militares" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubTitulosCiviles"
                style="@style/EstiloModuloCard">
                <TextView style="@style/EstiloModuloTexto" android:text="@string/titulos_civiles" />
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>