<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_fondo_abajo">

    <View
        android:id="@+id/viewHeaderTitulos"
        style="@style/EstiloCabeceraAzul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnVolverTitulos"
        style="@style/EstiloBotonVolver"
        android:contentDescription="@string/volver"
        android:src="@drawable/abc_ic_ab_back_material"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloTitulos"
        style="@style/EstiloTituloPantalla"
        android:text="@string/titulos_civiles_pantalla"
        app:layout_constraintBottom_toBottomOf="@+id/btnVolverTitulos"
        app:layout_constraintStart_toEndOf="@+id/btnVolverTitulos"
        app:layout_constraintTop_toTopOf="@+id/btnVolverTitulos" />

    <LinearLayout
        android:id="@+id/layoutFormularioInferiorTitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/blanco_insercion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_titulo_civil"
            app:boxStrokeColor="@color/bbva_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreTituloCivil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnadirTitulo"
                style="@style/EstiloBotonAnadir"
                android:text="@string/anadir" />

            <Button
                android:id="@+id/btnModificarTitulo"
                style="@style/EstiloBotonEditar"
                android:text="@string/editar" />

            <Button
                android:id="@+id/btnEliminarTitulo"
                style="@style/EstiloBotonBorrar"
                android:text="@string/borrar" />

            <Button
                android:id="@+id/btnLimpiarTitulo"
                style="@style/EstiloBotonLimpiar"
                android:text="@string/limpiar" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloListaTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/historial_de_titulos_guardados"
        android:textColor="@color/bbva_blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderTitulos" />

    <LinearLayout
        android:id="@+id/layoutTitulosColumnasTitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloListaTitulos">

        <TextView
            style="@style/EstiloTextoColumna"
            android:layout_weight="0.5"
            android:text="@string/nº"/>

        <TextView
            style="@style/EstiloTextoColumna"
            android:layout_weight="4"
            android:text="@string/nombre_titulo"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTitulosCiviles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitulosColumnasTitulos"
        app:layout_constraintBottom_toTopOf="@+id/layoutFormularioInferiorTitulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_titulo_civil" />

</androidx.constraintlayout.widget.ConstraintLayout>